--- a/index.html
+++ b/index.html
@@ -3,51 +3,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Md Mehedi Hasan</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <title>MD Mehedi Hasan</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
-        <div class="half-width">
-            <h1>Welcome To</h1>
-            <h1><span class="orange-highlight">MD.Mehedi Hasan</span> World</h1>
-            <h3>Build Climber and Train IOIO</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
-            <a class="link-button"  target="_blank" href="http://www.google.com">Hire Me</a>
+    <header>
+        <a href="#" class="logo">Mehedi<span>Hasan</span></a>
+        <div class="menuToggle"></div>
+        <ul class="nav">
+            <li class="active"><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </header>
+    <section id="home">
+        <div class="content">
+            <h2>Mehedi Hasan</h2>
+            <p>Dedicated and proficient MERN stack web developer with a proven track record in building robust and scalable web applications. Expert in MongoDB, Express.js, React, and Node.js, with a strong understanding of full-stack development. Experienced in creating dynamic and responsive user interfaces, developing RESTful APIs, and managing databases. Passionate about clean code, continuous learning, and leveraging cutting-edge technologies to deliver high-quality web solutions. Excellent team player with a knack for problem-solving and innovation.</p>
+            <a href="#" class="btn">Download CV</a>
         </div>
-        <div class="half-width">
-            <img src="images/image 19.png" alt="My_Image">
+        <img src="Images/hero-men.png" alt="Men" class="men">
+    </section>
+    <section id="about">
+        <div class="secText">
+            <h2>Who I am</h2>
+            <p>Hello! I'm a passionate and dedicated MERN stack web developer with a knack for creating dynamic, responsive, and user-friendly web applications. My expertise lies in MongoDB, Express.js, React, and Node.js, allowing me to develop full-stack solutions that are both efficient and scalable.</p>
+        </div>
+        <div class="content">
+            <div class="imgBx">
+                <img src="Images/about-men.png" alt="Men">
+            </div>
+            <div class="contBx">
+                <h3>About Me</h3>
+                <p>Hello! I'm a passionate and dedicated MERN stack web developer with a knack for creating dynamic, responsive, and user-friendly web applications. My expertise lies in MongoDB, Express.js, React, and Node.js, allowing me to develop full-stack solutions that are both efficient and scalable.</br> </br>With a solid background in both front-end and back-end development, I enjoy bringing ideas to life through clean code and innovative design. I thrive on challenges and am always eager to learn new technologies and improve my skills. Whether it's developing a seamless user interface, designing a RESTful API, or managing complex databases, I am committed to delivering high-quality solutions that meet and exceed expectations.</p>
+                <a href="#" class="btn">Learn More</a>
+            </div>
         </div>
     </section>
-    <section class="dream-area">
-        <div class="half-width">
-            <img src="images/my-bg1.png" alt="Image">
+    <section id="services">
+        <div class="secText">
+            <h2>Who I am</h2>
+            <p>I'm a passionate and dedicated MERN stack web developer with a knack for creating dynamic, responsive, and user-friendly web applications.</p>
         </div>
-        <div class="half-width">
-            <h2>Dream Big </h2>
-            <h3>Become a web developer</h3>
-            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="link-button" target="_blank" href="http://www.google.com">DOWNLOAD MY RESUME</a>
+        <div class="content">
+            <div class="serviceBx">
+                <img src="Images/icon1.png" alt="Services">
+                <h3>Web Design</h3>
+            </div>
+            <div class="serviceBx">
+                <img src="Images/icon2.png" alt="Services">
+                <h3>Web Development</h3>
+            </div>
+            <div class="serviceBx">
+                <img src="Images/icon3.png" alt="Services">
+                <h3>WordPress</h3>
+            </div>
+            <div class="serviceBx">
+                <img src="Images/icon4.png" alt="Services">
+                <h3>Shopify Theme Customization</h3>
+            </div>
+        </div>
+        <div class="center">
+            <a href="#" class="btn">See More</a>
         </div>
     </section>
-    <section class="experience-area">
-        <h2>Experiences</h2>
-        <div id="full-stack" class="half-width single-experience">
-            <h2>Full Stack Web Developer</h2>
-            <h3 class="orange-highlight">2021-Present | Pro Level Develope</h3>
-            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    <section id="portfolio">
+        <div class="secText">
+            <h2>Recently I Have Done</h2>
+            <p>Here are some example what I have done.Please visit the live link for more details.</p>
         </div>
-        <div id="baby-web" class="half-width single-experience">
-            <h2>Baby Web Developer</h2>
-            <h3 class="orange-highlight">2020-2021 | Programming Hero Learner</h3>
-            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        <div class="content">
+            <div class="imgBx">
+                <img src="Images/image1.png">
+            </div>
+            <div class="imgBx">
+                <img src="Images/image2.png">
+            </div>
+            <div class="imgBx">
+                <img src="Images/image3.png">
+            </div>
+            <div class="imgBx">
+                <img src="Images/image4.png">
+            </div>
+            <div class="imgBx">
+                <img src="Images/image5.png">
+            </div>
+            <div class="imgBx">
+                <img src="Images/image6.png">
+            </div>
+        </div>
+        <div class="center">
+            <a href="#" class="btn">See More</a>
         </div>
     </section>
-    <footer>
-        <p>© Md Mehedi Hasan 2021-2025, all rights reserved.</p>
-    </footer>
-    
+    <section id="contact">
+        <div class="secText">
+            <h2>Contact Me</h2>
+            <p>I'm always excited to connect with like-minded professionals, discuss potential projects, or simply chat about web development. Feel free to reach out to me.</p>
+        </div>
+        <div class="content">
+            <a href="#"><ion-icon name="mail-outline"></ion-icon>mdmehedihasan891@gmail.com</a>
+            <a href="#"><ion-icon name="call-outline"></ion-icon>+8801521439111</a>
+            <a href="#"><ion-icon name="logo-skype"></ion-icon>Skype</a>
+            <a href="https://wa.me/01521439111"><ion-icon name="logo-whatsapp"></ion-icon>WhatsApp</a>
+        </div>
+        <div class="center">
+            <p class="copyright">Copyright© 2024 | <a href="#">Mehedi Hasan</a></p>
+        </div>
+    </section>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
