Image folder name lower case

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>Dedicated and proficient MERN stack web developer with a proven track record in building robust and scalable web applications. Expert in MongoDB, Express.js, React, and Node.js, with a strong understanding of full-stack development. Experienced in creating dynamic and responsive user interfaces, developing RESTful APIs, and managing databases. Passionate about clean code, continuous learning, and leveraging cutting-edge technologies to deliver high-quality web solutions. Excellent team player with a knack for problem-solving and innovation.</p>
             <a href="#" class="btn">Download CV</a>
         </div>
-        <img src="Images/hero-men.png" alt="Men" class="men">
+        <img src="images/hero-men.png" alt="Men" class="men">
     </section>
     <section id="about">
         <div class="secText">
@@ -33,7 +33,7 @@
         </div>
         <div class="content">
             <div class="imgBx">
-                <img src="Images/about-men.png" alt="Men">
+                <img src="images/about-men.png" alt="Men">
             </div>
             <div class="contBx">
                 <h3>About Me</h3>
@@ -49,19 +49,19 @@
         </div>
         <div class="content">
             <div class="serviceBx">
-                <img src="Images/icon1.png" alt="Services">
+                <img src="images/icon1.png" alt="Services">
                 <h3>Web Design</h3>
             </div>
             <div class="serviceBx">
-                <img src="Images/icon2.png" alt="Services">
+                <img src="images/icon2.png" alt="Services">
                 <h3>Web Development</h3>
             </div>
             <div class="serviceBx">
-                <img src="Images/icon3.png" alt="Services">
+                <img src="images/icon3.png" alt="Services">
                 <h3>WordPress</h3>
             </div>
             <div class="serviceBx">
-                <img src="Images/icon4.png" alt="Services">
+                <img src="images/icon4.png" alt="Services">
                 <h3>Shopify Theme Customization</h3>
             </div>
         </div>
@@ -76,22 +76,22 @@
         </div>
         <div class="content">
             <div class="imgBx">
-                <img src="Images/image1.png">
+                <img src="images/image1.png">
             </div>
             <div class="imgBx">
-                <img src="Images/image2.png">
+                <img src="images/image2.png">
             </div>
             <div class="imgBx">
-                <img src="Images/image3.png">
+                <img src="images/image3.png">
             </div>
             <div class="imgBx">
-                <img src="Images/image4.png">
+                <img src="images/image4.png">
             </div>
             <div class="imgBx">
-                <img src="Images/image5.png">
+                <img src="images/image5.png">
             </div>
             <div class="imgBx">
-                <img src="Images/image6.png">
+                <img src="images/image6.png">
             </div>
         </div>
         <div class="center">
